# dtu_mlops_project

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild-train.yaml  cloudbuild-web.yaml  cloudbuild.yaml  config.yaml  main.py  model_config.yaml  pull_data.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  rxconfig.py  tasks.py  vertex-config.yaml  vertex_ai_train.yaml
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: tests.yaml
configs/: model_config.yaml  sweep.yaml
data/: raw.dvc  raw_subset.dvc
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile  web.dockerfile  websocket.dockerfile
docs/: mkdocs.yaml
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
docs/source/: index.md
frontend/: frontend.py
models/: .gitignore  mushroom_model.ckpt
reports/: README.md
src/mushroomclassification/: api.py  augmentations.py  data.py  frontend.py  model.py  pull_data.py  requirements_rocm.txt  test.py  train.py  visualize.py
src/mushroomclassification/utils/: config_loader.py  create_raw_data_subset.py  (+1 more)
tests/: test_data.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py
tests/unittests/: test_data.py  test_model.py
venvmlops/: pyvenv.cfg
wandb/: latest-run
wandb/run-20250122_210701-0w31egy5/: run-0w31egy5.wandb
wandb/run-20250122_210735-f6q0at53/: run-f6q0at53.wandb
wandb/run-20250122_211118-151frq26/: run-151frq26.wandb
wandb/run-20250122_211259-10vian2n/: run-10vian2n.wandb
wandb/run-20250122_211553-zpdcouqe/: run-zpdcouqe.wandb
(+9 files in other folders)
