[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mushroomclassification"
version = "0.0.1"
description = "mushroom classification"
authors = [
  { name = "group4", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mushroomclassification"]

[tool.setuptools.package-dir]
mushroomclassification = "src/mushroomclassification"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "C"]

[tool.coverage.run]
omit = ["tests/*", "/tmp/*", "/private/var/*"]

[coverage:run]
omit = */config-3.py
